--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -18,13 +18,32 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#root {
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  text-align: center;
+  background-image: url("./assets/wallpaper.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-a:hover {
-  color: #535bf2;
+
+.logo {
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+a {
+  height: fit-content;
+  font-weight: 500;
+  vertical-align: middle;
+  color: #ffffff;
+  text-decoration: inherit;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
 }
 
 body {
@@ -70,4 +89,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.wrapper {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: grid-template-rows 0.5s ease-out;
+}
+
+.wrapper.is-open {
+  grid-template-rows: 1fr;
+}
+
+.inner {
+  overflow: hidden;
 }
