--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -18,6 +18,11 @@
   user-select: none;
 }
 
+html {
+  overflow: auto;
+  height: 100vh;
+}
+
 #root {
   max-width: 100vw;
   height: 100vh;
@@ -109,11 +114,12 @@ button:focus-visible {
   scrollbar-width: none; /* Firefox */
 }
 
-/* #root {
+#hero {
   background-image: url("./assets/Panorma_Cairo_Stadium.jpg");
-  background-size: 100vw 100vh;
+  background-position: center;
   background-repeat: no-repeat;
-} */
+  background-attachment: fixed;
+}
 
 .dataTables_filter input,
 select {
