--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -20,7 +20,6 @@
 
 #root {
   max-width: 100vw;
-  height: 100vh;
   margin: 0 auto;
   text-align: center;
 }
@@ -31,6 +30,22 @@
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+html {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-height: 100%;
+}
+
+.sticky-navbar {
+  position: sticky;
+  top: 0;
+  z-index: 100; 
 }
 
 a {
@@ -46,7 +61,6 @@ a {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -109,12 +123,13 @@ button:focus-visible {
   scrollbar-width: none; /* Firefox */
 }
 
-/* #hero {
+#hero {
+  min-height: 90vh;
   background-image: url("./assets/Panorma_Cairo_Stadium.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-} */
+}
 
 .dataTables_filter input,
 select {
